[build-system]
requires = ["flit_core >=3.2,<4", "redis >=6.4.0"]
build-backend = "flit_core.buildapi"

[project]
name = "redis_models"
authors = [{name = "nejdetckenobi", email = "nejdetyucesoy@gmail.com"}]
license = {file = "LICENSE"}
dynamic = ["version", "description"]
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage>=7.0"
]

[project.urls]
Home = "https://github.com/nejdetckenobi/redis_models"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]